# pyre

./: README.md  pyproject.toml
src/: main.py
src/commands/: add.py  check.py  install.py  new.py  run.py
templates/default/: pyproject.toml
templates/default/src/: errors.py  main.py  models.py
templates/fastapi/: pyproject.toml  run.py
templates/fastapi/src/: errors.py  main.py
templates/fastapi/src/db/: session.py
templates/fastapi/src/models/: user.py
templates/fastapi/src/routes/: users.py
templates/fastapi/src/schemas/: user.py
templates/minimal/: .gitignore  pyproject.toml
templates/minimal/src/: main.py
templates/numpy/: pyproject.toml
templates/numpy/src/: analysis.py  data.py  main.py  models.py
templates/pytorch/: pyproject.toml
templates/pytorch/src/: config.py  dataset.py  main.py  model.py  train.py
templates/scraper/: pyproject.toml
templates/scraper/src/: main.py  models.py  scraper.py
