[project]
name = "pyre"
version = "0.1.0"
description = "The missing scaffolder for modern Python. Set your projects ablaze."
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.1.1",
]

[project.scripts]
pyre = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["templates"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
