[project]
name = "{project_name}"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "result>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
python_version = "3.14"
explicit_package_bases = true
mypy_path = "src"

[tool.ruff]
line-length = 88
target-version = "py314"
