[project]
name = "{project_name}"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "result>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true

[tool.ruff]
line-length = 88
target-version = "py314"
